fixing more layout issues, pretify forms

--- a/public/stylesheets/minimum.css
+++ b/public/stylesheets/minimum.css
@@ -58,6 +58,12 @@ span.red {
 
 span.white {
     color : #ffffff;
+    /*-webkit-text-stroke: 1px black;*/
+    /*text-shadow:*/
+      /*-0.5px -0.5px 0 #000,*/
+      /*0.5px -0.5px 0 #000,*/
+      /*-0.5px 0.5px 0 #000,*/
+      /*0.5px 0.5px 0 #000;*/
 }
 
 a.yellow {
@@ -416,10 +422,10 @@ img.grade_tag {
 }
 
 #boulder_gradenr {
-    display     : inline-block;
-    width       : 130px;
+    /*display     : inline-block;*/
+    /*width       : 130px;*/
     font-size   : 70pt;
-    float       : left;
+    /*float       : left;*/
     text-shadow : -1px 0 gray, 0 1px gray, 1px 0 gray, 0 -1px gray;
     font-weight : bold;
     margin-top  : -15px;
